--- a/vue-portfolio/public/css/style.css
+++ b/vue-portfolio/public/css/style.css
@@ -207,6 +207,7 @@ header.on .menu ul.inner.on {
   font-weight: 700;
   transition: all 0.3s;
 }
+.menu > li.active > a,
 .menu > li:hover > a,
 .menu > li > a:focus {
   color: #1abc9c;
@@ -217,7 +218,7 @@ header.on .menu ul.inner.on {
   position: relative;
   top: 0;
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   background-color: #ffbbe0;
   transition: background-color 0.2s ease-in-out;
 }
@@ -406,7 +407,6 @@ header.on .menu ul.inner.on {
 
 /* section */
 section {
-  margin-bottom: 300px;
 }
 section .title {
   position: relative;
@@ -514,14 +514,14 @@ section .title p {
   background: #fff;
   line-height: 40px;
   cursor: default;
-  height: 200px;
 }
 .main-intro #intro0 .txt {
   border: 2px solid #ffbbe0;
   position: absolute;
   left: 100px;
-  top: 230px;
-  width: 350px;
+  top: 280px;
+  width: 560px;
+  height: auto;
   box-shadow: 10px 10px 0px #ffd8ed;
 }
 .main-intro #intro0 .txt:before {
@@ -531,6 +531,20 @@ section .title p {
   width: 100px;
   height: 100px;
   background: url(../img/text_half.png) center/cover;
+}
+.main-intro #intro0 .txt:hover:before {
+  animation: updown-smile linear 1s;
+}
+@keyframes updown-smile {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(120px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
 .main-intro #intro0 .txt:after {
   content: "";
@@ -542,11 +556,25 @@ section .title p {
   background: url(../img/text_good.png) center/cover;
   transform: rotate(68deg);
 }
+.main-intro #intro0 .txt:hover:after {
+  animation: wiggle-like linear 0.5s 2;
+}
+@keyframes wiggle-like {
+  0% {
+    transform: rotate(68deg);
+  }
+  50% {
+    transform: rotate(40deg);
+  }
+  100% {
+    transform: rotate(68deg);
+  }
+}
 .main-intro #intro1 .txt {
   position: absolute;
   border: 2px solid #7adfca;
   right: 80px;
-  top: 740px;
+  top: 940px;
   width: 350px;
   box-shadow: 10px 10px 0px #a4e4d8;
 }
@@ -560,10 +588,21 @@ section .title p {
   background: url(../img/text_smile.png) center/cover;
   transform: rotate(30deg);
 }
+.main-intro #intro1 .txt:hover:after {
+  animation: spin-smile 1s 1;
+}
+@keyframes spin-smile {
+  0% {
+    transform: rotate(30deg);
+  }
+  100% {
+    transform: rotate(-690deg);
+  }
+}
 .main-intro #intro0 .img {
   position: absolute;
-  top: 150px;
-  left: 450px;
+  top: 100px;
+  right: 50px;
 }
 .main-intro #intro0 .img:after {
   content: "✨";
@@ -580,8 +619,8 @@ section .title p {
 }
 .main-intro #intro1 .img {
   position: absolute;
-  left: 110px;
-  top: 890px;
+  left: 80px;
+  top: 820px;
 }
 .main-intro #intro1 .img::after {
   content: "💕";
@@ -597,6 +636,10 @@ section .title p {
 }
 .main-intro .base-button button {
   width: 100px;
+  height: 30px;
+}
+.main-intro .base-button button label {
+  padding-top: 4px;
 }
 
 /* skill */
@@ -777,6 +820,112 @@ section .title p {
   font-size: 20px;
   right: 78px;
   bottom: 13px;
+}
+
+/* contact */
+.main-contact {
+  position: relative;
+  width: 500px;
+  height: 60vh;
+  margin: auto;
+  margin-top: calc(40vh - 90px);
+  cursor: default;
+}
+.main-contact .title {
+  color: #fff;
+  transform: translateX(15px);
+}
+.main-contact .content {
+  cursor: pointer;
+  padding: 0px;
+  color: #fff;
+  font-size: 24px;
+  font-weight: 700;
+}
+.main-contact .content:before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 40px;
+  width: 170px;
+  height: 170px;
+  z-index: -1;
+  background: url(../img/contactMe.png) no-repeat center/cover;
+  transform: translateX(240px) translateY(-100px) rotate(13deg);
+  border-radius: 50%;
+}
+.main-contact .content:after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 40px;
+  width: 370px;
+  height: 370px;
+  z-index: -1;
+  background: url(../img/contactImg.png) no-repeat center/cover;
+  transform: translateX(30px) translateY(20px);
+  transition: all 3s;
+}
+.main-contact .content:hover:after {
+  animation: pitapat 0.5s infinite;
+}
+.main-contact .content:hover:before {
+  animation: call 0.5s infinite;
+}
+.main-contact .content > div {
+  position: relative;
+  width: 400px;
+  text-align: center;
+  top: 6px;
+  left: 40px;
+}
+.main-contact .content > div:first-child {
+  top: -5px;
+}
+.main-contact .content i {
+  display: inline-block;
+  position: relative;
+  top: 3px;
+  left: 2px;
+  font-size: 38px;
+  margin: auto 10px;
+}
+.main-contact .content a:before {
+  content: "";
+  position: absolute;
+  top: 6px;
+  width: 0%;
+  height: 35px;
+  border-bottom: #fff 3px solid;
+  transition: all 0.3s;
+}
+.main-contact .content a:hover:before {
+  width: 60%;
+}
+.main-contact .content #phone a:hover:before {
+  width: 45%;
+}
+@keyframes pitapat {
+  0% {
+    transform: translateX(30px) translateY(20px) rotate(0deg);
+  }
+  50% {
+    transform: translateX(30px) translateY(20px) scale(1.02) rotate(0deg);
+  }
+  100% {
+    transform: translateX(30px) translateY(20px) rotate(0deg);
+  }
+}
+@keyframes call {
+  0% {
+    transform: translateX(240px) translateY(-100px) rotate(13deg);
+  }
+  50% {
+    transform: translateX(240px) translateY(-104px) rotate(12deg);
+  }
+  100% {
+    transform: translateX(240px) translateY(-100px) rotate(13deg);
+  }
 }
 
 /* about */
