--- a/vue-portfolio/public/css/style.css
+++ b/vue-portfolio/public/css/style.css
@@ -404,10 +404,60 @@ header.on .menu ul.inner.on {
     transform: translateY(0);
   }
 }
+.slide-up {
+  animation: slideUp 1s ease-in;
+}
+@keyframes slideUp {
+  0% {
+    opacity: 0.8;
+    transform: translateY(40%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+.slide-down {
+  animation: slideDown 1s ease-in;
+}
+@keyframes slideDown {
+  0% {
+    opacity: 0.8;
+    transform: translateY(-40%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+.slide-left {
+  animation: slideLeft 1s ease-in;
+}
+@keyframes slideLeft {
+  0% {
+    opacity: 0.8;
+    transform: translateX(40%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+.slide-right {
+  animation: slideRight 1s ease-in;
+}
+@keyframes slideRight {
+  0% {
+    opacity: 0.8;
+    transform: translateX(-40%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
 
 /* section */
-section {
-}
 section .title {
   position: relative;
   width: 480px;
@@ -831,6 +881,12 @@ section .title p {
   margin-top: calc(40vh - 90px);
   cursor: default;
 }
+.main .main-contact {
+  position: relative;
+  bottom: 0;
+  height: 600px;
+  margin-top: 600px;
+}
 .main-contact .title {
   color: #fff;
   transform: translateX(15px);
@@ -865,6 +921,43 @@ section .title p {
   background: url(../img/contactImg.png) no-repeat center/cover;
   transform: translateX(30px) translateY(20px);
   transition: all 3s;
+}
+.main-contact .content.scale-up:before {
+  animation: showMe 1.5s ease-in;
+}
+@keyframes scaleUp {
+  0% {
+    opacity: 0;
+    transform: scale(0.1) translateX(650px) translateY(-100px) rotate(33deg);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1) translateX(30px) translateY(20px);
+  }
+}
+.main-contact .content.scale-up:after {
+  animation: scaleUp 1.2s ease-in;
+}
+@keyframes showMe {
+  0% {
+    opacity: 0;
+  }
+  80% {
+    opacity: 0;
+    transform: scale(1) translateX(240px) translateY(-70px) rotate(13deg);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1) translateX(240px) translateY(-100px) rotate(13deg);
+  }
+}
+@keyframes scaleDown {
+  0% {
+    transform: scale(2) translateX(30px) translateY(20px);
+  }
+  100% {
+    transform: scale(1) translateX(30px) translateY(20px);
+  }
 }
 .main-contact .content:hover:after {
   animation: pitapat 0.5s infinite;
