feat: Update scroll event

--- a/portfolio-vue/public/css/style.css
+++ b/portfolio-vue/public/css/style.css
@@ -897,6 +897,7 @@ section .title p {
   color: #fff;
   font-size: 24px;
   font-weight: 700;
+  height: 500px;
 }
 .main-contact .content:before {
   content: "";
